[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/Font/Default.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/MODAL/MODAL_PANEL.tres" type="StyleBox" id=2]
[ext_resource path="res://Scenes/POPUP/POPUP_BTN_pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://Scenes/POPUP/POPUP_BTN.tres" type="StyleBox" id=4]
[ext_resource path="res://Resources/Imgs/UI/icons/OK.png" type="Texture" id=5]
[ext_resource path="res://Resources/Imgs/UI/icons/cancel.png" type="Texture" id=6]
[ext_resource path="res://Scenes/MODAL/MODAL.gd" type="Script" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Animation" id=2]
resource_name = "MODAL_IN"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.29, 1 ),
"update": 0,
"values": [ Color( 0.0784314, 0.0941176, 0.180392, 0 ), Color( 0.0784314, 0.0941176, 0.180392, 0.784314 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.29, 1 ),
"update": 0,
"values": [ Vector2( 0, 256 ), Vector2( 0, 192 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "MODAL_OUT"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.29, 1 ),
"update": 0,
"values": [ Color( 0.0784314, 0.0941176, 0.180392, 0.784314 ), Color( 0.0784314, 0.0941176, 0.180392, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.29, 1 ),
"update": 0,
"values": [ Vector2( 0, 192 ), Vector2( 0, 256 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="MODAL" type="ColorRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.0784314, 0.0941176, 0.180392, 0.784314 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0
margin_bottom = 3.05176e-05
rect_min_size = Vector2( 144, 64 )
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -3.0
rect_min_size = Vector2( 144, 0 )
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 141.0
margin_bottom = 61.0
rect_min_size = Vector2( 138, 55 )
custom_constants/separation = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 138.0
margin_bottom = 29.0
rect_min_size = Vector2( 138, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MSG" type="Label" parent="Panel/MarginContainer/VBoxContainer/CenterContainer"]
margin_right = 138.0
margin_bottom = 29.0
rect_min_size = Vector2( 138, 20 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.168627, 0.168627, 0.270588, 1 )
text = "You will lose your progress if you leave the game, are you sure about leaving?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 138.0
margin_bottom = 58.0
alignment = 1

[node name="OK" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 43.0
margin_right = 67.0
margin_bottom = 26.0
rect_min_size = Vector2( 24, 26 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.960784, 1, 0.909804, 1 )
custom_constants/hseparation = 0
icon = ExtResource( 5 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CANCEL" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 71.0
margin_right = 95.0
margin_bottom = 26.0
rect_min_size = Vector2( 24, 26 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.960784, 1, 0.909804, 1 )
custom_constants/hseparation = 0
icon = ExtResource( 6 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aPlayer" type="AnimationPlayer" parent="."]
anims/MODAL_IN = SubResource( 2 )
anims/MODAL_OUT = SubResource( 3 )

[connection signal="visibility_changed" from="." to="." method="_on_MODAL_visibility_changed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/CANCEL" to="." method="_on_CANCEL_pressed"]
